# task_programmer

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py  view.rviz
cfg/: Waypoints.cfg
config/: cmd_vel.config.yaml  elecom-holonomic.config.yaml  elecom.config.yaml  elecom_to_ps3.yaml  lifter.yaml  logicool_to_ps3.yaml  ps3-holonomic.config.yaml  ps3.config.yaml  test.yaml  waypoints.yaml
config/gui/: point_names.csv
config/maps/: keepout.pgm  keepout.yaml
config/objects/: find_object.ini
config/scenarios/: scenario.yaml
launch/: ar_track_realsense.launch  find_object_3d.launch  joy.launch  make_map.launch  map_saver.launch  realsense_laser.launch  robot_bringup.launch  rs_camera.launch  server.launch  simulation.launch  static_map.launch  test.launch  view.launch  wheel_bringup.launch
scripts/: bringup.sh  gamepad_function.py  go.py  joy_smoother.py  scp.exp  ssh.exp  start.py  teleop_mover.sh
src/: TaskController.cpp  TaskController.hh  WaypointsEditor.cpp  lifter_controller.cpp  lifter_controller.h
src/task_programmer/: __init__.py  button.py  motion.py  mover.py  screen.py
srv/: TaskController.srv
www/: Mover.html  Noid_Mover.html  Teleoperation.html  index.html
www/common/css/: style.css
www/js/: script.js  teleop_joy.js
